# esp32-c3-matter-minimal

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
