[package]
name = "esp32-c3-matter-minimal"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1"
esp-idf-hal = { version = "0.40" }
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = "0.45"
embedded-svc = "0.24"
matter-iot = { git = "https://github.com/nevi-me/matter-rs", branch = "esp32-c3-kedar-changes", default-features = false, features = ["crypto_esp_mbedtls"] }
# matter-iot = { path = "../matter-rs/matter", default-features = false, features = ["crypto_rustcrypto"] }

log = "0.4"

[build-dependencies]
embuild = "0.31"
anyhow = "1"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
chrono = { git = "https://github.com/kedars/chrono" }
ring = { git = "https://github.com/esp-rs-compat/ring" }